# amstools

./: CMakeLists.txt  README.md
.github/workflows/: build-n-test.yml
cmake/: BuildType.cmake
src/: CMakeLists.txt  acgt.cpp  ngx.cpp  sc.cpp  version.hpp.in
